# Math-Algorithms

./: .gitignore  CMakeLists.txt  README.md  index.md  mathAlgo.cpp  mathAlgo.h
include/: mathAlgo.h
